--- a/src/MicroApplicationFramework/MicroApplicationFramework.csproj
+++ b/src/MicroApplicationFramework/MicroApplicationFramework.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DryIoc" Version="5.1.0" />
+    <PackageReference Include="DryIoc.dll" Version="5.2.1" />
   </ItemGroup>
 
 </Project>
