--- a/src/MicroApplicationFramework/MicroApplicationFramework.csproj
+++ b/src/MicroApplicationFramework/MicroApplicationFramework.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="DryIoc.dll" Version="5.2.1" />
+    <PackageReference Include="Serilog" Version="2.11.0" />
   </ItemGroup>
 
 </Project>
