--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -5,11 +5,12 @@ on: [push]
 jobs:
   build:
 
-    runs-on: ubuntu-latest
     strategy:
       matrix:
+        platform: [ubuntu-latest, macos-latest, windows-latest]
         # https://dotnetcli.blob.core.windows.net/dotnet/release-metadata/releases-index.json
         dotnet-version: [ '6.0.x' ]
+    runs-on: ${{ matrix.platform }}
     steps:
       - uses: actions/checkout@v3
       - name: Setup .NET Core SDK ${{ matrix.dotnet-version }}
